episodes/072/kuard-kustomize/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
spec:
  backend:
    serviceName: kuard
    servicePort: 8080
